class_name FlyingEnemy
extends CharacterBody2D

# ----------------------------------------------------
# âš™ï¸ Ø§Ù„Ø¥Ø¹Ø¯Ø§Ø¯Ø§Øª ÙˆØ§Ù„Ø«ÙˆØ§Ø¨Øª (Configuration)
# ----------------------------------------------------
const MAX_HEALTH: float = 30.0
const FLY_SPEED: float = 150.0 
const KNOCKBACK_FORCE: float = 200.0
const PATROL_DISTANCE: float = 100.0 # Ù…Ø¯Ù‰ Ø§Ù„Ø¯ÙˆØ±ÙŠØ§Øª Ø§Ù„Ø£ÙÙ‚ÙŠØ©
# const MOUTH_OFFSET_X: float = 30.0 # ğŸ’¡ ØªÙ… Ø¥Ù„ØºØ§Ø¡ Ø§Ù„Ø¥Ø²Ø§Ø­Ø© Ù„Ø¥Ø·Ù„Ø§Ù‚ Ø§Ù„Ù…Ù‚Ø°ÙˆÙØ© Ù…Ù† Ø§Ù„Ù…Ø±ÙƒØ² ğŸ’¡

# ğŸ¯ Ø¥Ø¹Ø¯Ø§Ø¯Ø§Øª Ø§Ù„Ù‡Ø¬ÙˆÙ…
const RANGED_ATTACK_RANGE: float = 300.0 # Ù…Ø¯Ù‰ Ø¨Ø¯Ø¡ Ù‡Ø¬ÙˆÙ… Ø§Ù„Ù‚Ø°Ù
const DIVE_THRESHOLD: float = 100.0   # Ù…Ø¯Ù‰ Ø¨Ø¯Ø¡ Ù‡Ø¬ÙˆÙ… Ø§Ù„ØºÙˆØµ (Ù‚Ø±ÙŠØ¨ Ø¬Ø¯Ø§Ù‹)
const DIVE_SPEED: float = 800.0       # Ø³Ø±Ø¹Ø© Ø§Ù„ØºÙˆØµ
const SHOOT_PREPARE_TIME: float = 1.0 # ÙˆÙ‚Øª Ø§Ù„ØªØ­Ø¶ÙŠØ± Ù‚Ø¨Ù„ Ø§Ù„Ø±Ù…ÙŠ
const ATTACK_DAMAGE: int = 15
const PROJECTILE_SPEED: float = 400.0

# ğŸ’¡ Ù…Ø³Ø§Ø± Ù…Ø´Ù‡Ø¯ Ø§Ù„Ù…Ù‚Ø°ÙˆÙØ© (Projectile Scene Path) - ÙŠØ¬Ø¨ ØªØ¹Ø¯ÙŠÙ„Ù‡
# NOTE: Replace "Projectile.tscn" with the actual path to your projectile scene.
const PROJECTILE_SCENE = preload("res://projectile.tscn") 

# ----------------------------------------------------
# ğŸ” Ø§Ù„Ù…Ø±Ø§Ø¬Ø¹ (Node References)
# ----------------------------------------------------
@onready var anim: AnimatedSprite2D = $AnimatedSprite2D
@onready var detection_area: Area2D = $DetectionArea 
@onready var hitbox: Area2D = $HitBox     # Ù„Ù„Ù‡Ø¬ÙˆÙ… Ø§Ù„ØºØ§Ø·Ø³ (Dive Attack)
@onready var hurt_box: Area2D = $HurtBox 
@onready var attack_timer: Timer = $AttackTimer 

# ----------------------------------------------------
# ğŸ’¡ Ø§Ù„Ù…ØªØºÙŠØ±Ø§Øª Ø§Ù„Ø¯Ø§Ø®Ù„ÙŠØ© ÙˆØ¢Ù„Ø© Ø§Ù„Ø­Ø§Ù„Ø©
# ----------------------------------------------------
var current_health: float = MAX_HEALTH
var target_player: CharacterBody2D = null
var initial_position: Vector2 
var hit_reaction_timer: float = 0.0

# ğŸ¯ Ø§Ù„Ø­Ø§Ù„Ø§Øª: ØªÙ… ØªÙ‚Ø³ÙŠÙ… DIVE_ATTACK Ø¥Ù„Ù‰ 3 Ù…Ø±Ø§Ø­Ù„
enum State { PATROL, CHASE, SHOOT_PREPARE, SHOOT, DIVE_START, DIVE_FALLING, DIVE_END, HIT, DIE }
var current_state = State.PATROL

# ----------------------------------------------------
# ğŸ Ø¯Ø§Ù„Ø© Ø§Ù„Ø¥Ø¹Ø¯Ø§Ø¯ (Setup)
# ----------------------------------------------------
func _ready():
	initial_position = global_position
	# Ø§Ù„Ø§ØªØµØ§Ù„ Ø¨Ø§Ù„Ø¥Ø´Ø§Ø±Ø§Øª
	if is_instance_valid(hurt_box):
		hurt_box.hit_received.connect(Callable(self, "take_damage"))
	if is_instance_valid(detection_area):
		detection_area.body_entered.connect(_on_detection_body_entered)
		detection_area.body_exited.connect(_on_detection_body_exited)
	# âœ… ÙØ­Øµ ØµÙ„Ø§Ø­ÙŠØ© anim Ù‚Ø¨Ù„ Ø±Ø¨Ø· Ø§Ù„Ø¥Ø´Ø§Ø±Ø©
	if is_instance_valid(anim):
		anim.animation_finished.connect(_on_animation_finished)
	if is_instance_valid(attack_timer):
		attack_timer.timeout.connect(Callable(self, "_on_attack_timer_timeout"))

	add_to_group("enemies")
	
	# Ø§Ù„Ù‡ÙŠØª Ø¨ÙˆÙƒØ³ Ù…Ø¹Ø·Ù„ ÙÙŠ Ø§Ù„Ø¨Ø¯Ø§ÙŠØ© (ÙŠÙØ¹Ù„ ÙÙ‚Ø· Ø£Ø«Ù†Ø§Ø¡ Ø§Ù„ØºÙˆØµ)
	if is_instance_valid(hitbox) and hitbox.has_method("deactivate"): hitbox.deactivate()
	
	change_state(State.PATROL)

# ----------------------------------------------------
# âš¡ Ø§Ù„Ù…Ø¹Ø§Ù„Ø¬Ø© Ø§Ù„ÙÙŠØ²ÙŠØ§Ø¦ÙŠØ© (Physics Loop)
# ----------------------------------------------------
func _physics_process(delta: float):
	if current_state == State.DIE: return
	
	match current_state:
		State.PATROL: _logic_patrol(delta)
		State.CHASE: _logic_chase(delta)
		State.HIT: _logic_hit(delta)
		State.SHOOT_PREPARE, State.SHOOT:
			# Ø§Ù„ØªÙˆÙ‚Ù Ø£Ø«Ù†Ø§Ø¡ Ø§Ù„Ø±Ù…ÙŠ
			velocity = velocity.lerp(Vector2.ZERO, delta * 10.0)
		
		# ÙŠØªÙ… Ø§Ø³ØªØ®Ø¯Ø§Ù… Ù…Ù†Ø·Ù‚ Ø§Ù„ØºÙˆØµ ÙÙŠ Ù…Ø±Ø­Ù„ØªÙŠÙ†
		State.DIVE_START, State.DIVE_FALLING:
			_logic_dive_falling(delta)
			
		State.DIVE_END:
			# Ø§Ù„ØªÙˆÙ‚Ù Ù„Ø­Ø¸ÙŠØ§Ù‹ Ø¨Ø¹Ø¯ Ø§Ù„Ù‡Ø¨ÙˆØ·
			velocity = velocity.lerp(Vector2.ZERO, delta * 20.0)
			
	move_and_slide()

# ----------------------------------------------------
# ğŸ® Ù…Ù†Ø·Ù‚ Ø§Ù„Ø­Ø§Ù„Ø§Øª (State Logic)
# ----------------------------------------------------

func _logic_patrol(delta: float):
	if target_player: 
		change_state(State.CHASE)
		return

	# Ø­Ø±ÙƒØ© Sine/Cosine Ù„Ù†Ù…Ø· Ø§Ù„Ø¯ÙˆØ±ÙŠØ§Øª
	var time = Time.get_ticks_msec() / 1000.0
	var offset_x = sin(time * 1.5) * PATROL_DISTANCE
	var target_pos = initial_position + Vector2(offset_x, 0)
	
	_set_orientation(sign(target_pos.x - global_position.x))
	var direction = (target_pos - global_position).normalized()
	velocity = direction * (FLY_SPEED / 2.0)

func _logic_chase(delta: float):
	if not target_player: 
		change_state(State.PATROL) # Ø§Ù„Ø¹ÙˆØ¯Ø© Ù„Ù„Ø¯ÙˆØ±ÙŠØ§Øª
		return
	
	var direction_to_player = (target_player.global_position - global_position)
	var distance = direction_to_player.length()
	
	# 1. Ù‚Ø±Ø§Ø± Ø§Ù„Ù‡Ø¬ÙˆÙ… (Ø¨Ù†Ø§Ø¡Ù‹ Ø¹Ù„Ù‰ Ø§Ù„Ø£ÙˆÙ„ÙˆÙŠØ©)
	
	# ğŸ’¡ Ø§Ù„Ø£ÙˆÙ„ÙˆÙŠØ© 1: Ù‡Ø¬ÙˆÙ… Ø§Ù„ØºÙˆØµ (Ø¥Ø°Ø§ ÙƒØ§Ù† Ù‚Ø±ÙŠØ¨ Ø¬Ø¯Ø§Ù‹ ÙˆØ£Ø³ÙÙ„ Ù…Ù†Ù‡)
	if distance < DIVE_THRESHOLD and direction_to_player.y > 0:
		change_state(State.DIVE_START) # ÙŠØ¨Ø¯Ø£ Ø±Ø³Ù…Ø© Ø§Ù„ØºÙˆØµ
		return
	
	# ğŸ’¡ Ø§Ù„Ø£ÙˆÙ„ÙˆÙŠØ© 2: Ù‡Ø¬ÙˆÙ… Ø§Ù„Ù‚Ø°Ù (Ø¥Ø°Ø§ ÙƒØ§Ù† Ø¶Ù…Ù† Ø§Ù„Ù…Ø¯Ù‰ Ø§Ù„Ù…ØªÙˆØ³Ø·)
	# âœ… Ø§Ù„Ø´Ø±Ø· Ø§Ù„Ø¬Ø¯ÙŠØ¯: ÙŠØ¬Ø¨ Ø£Ù† ÙŠÙƒÙˆÙ† Ø§Ù„Ø¹Ø¯Ùˆ Ù…ÙˆØ§Ø¬Ù‡Ø§Ù‹ Ù„Ù„Ø§Ø¹Ø¨ Ù„ÙƒÙŠ ÙŠØ·Ù„Ù‚ Ø§Ù„Ù†Ø§Ø±
	if distance < RANGED_ATTACK_RANGE and _is_facing_player():
		change_state(State.SHOOT_PREPARE)
		return
		
	# 2. Ø§Ù„Ø­Ø±ÙƒØ© Ù†Ø­Ùˆ Ø§Ù„Ù„Ø§Ø¹Ø¨ (ÙŠØ³ØªÙ…Ø± ÙÙŠ Ø§Ù„Ù…Ø·Ø§Ø±Ø¯Ø© Ø¥Ø°Ø§ Ù„Ù… ÙŠÙ‡Ø§Ø¬Ù…)
	_set_orientation(sign(direction_to_player.x))
	velocity = direction_to_player.normalized() * FLY_SPEED

func _logic_dive_falling(delta: float):
	# Ø§Ù„ØªØ­Ø±Ùƒ Ø¹Ù…ÙˆØ¯ÙŠØ§Ù‹ Ù„Ù„Ø£Ø³ÙÙ„ Ø¨Ø³Ø±Ø¹Ø© Ø§Ù„ØºÙˆØµ
	velocity.x = 0
	velocity.y = DIVE_SPEED
	
	# ğŸ’¡ Ø§Ù„ØªØ­Ù‚Ù‚ Ù…Ù† Ø§Ù„Ù‡Ø¨ÙˆØ·:
	if is_on_floor():
		velocity.y = 0
		change_state(State.DIVE_END) # Ø§Ù„Ø§Ù†ØªÙ‚Ø§Ù„ Ø¥Ù„Ù‰ Ø±Ø³Ù…Ø© Ø§Ù„Ù‡Ø¨ÙˆØ· (End)
		return
	
	# âœ… Ø¶Ù…Ø§Ù† ØªØ´ØºÙŠÙ„ DIVE_LOOP Ù…Ø±Ø© ÙˆØ§Ø­Ø¯Ø© ÙÙ‚Ø· Ø¹Ù†Ø¯ Ø§Ù„Ø¯Ø®ÙˆÙ„ Ù„Ù€ DIVE_FALLING
	if current_state == State.DIVE_FALLING and anim.is_valid() and anim.animation != "Dive_Loop":
		anim.play("Dive_Loop")


func _logic_hit(delta: float):
	hit_reaction_timer -= delta
	if hit_reaction_timer <= 0:
		change_state(State.CHASE if target_player else State.PATROL)
	
	# Ø¥Ø¨Ø·Ø§Ø¡ Ø§Ù„Ø§Ø±ØªØ¯Ø§Ø¯
	velocity = velocity.lerp(Vector2.ZERO, delta * 5.0)

# ----------------------------------------------------
# ğŸ”„ ØªØºÙŠÙŠØ± Ø§Ù„Ø­Ø§Ù„Ø© (State Transitions)
# ----------------------------------------------------
func change_state(new_state: State):
	# Ø¥Ø¯Ø§Ø±Ø© Ø§Ù„Ù‡ÙŠØª Ø¨ÙˆÙƒØ³ (ÙŠÙØ¹Ù„ ÙÙ‚Ø· Ø£Ø«Ù†Ø§Ø¡ Ø§Ù„Ø³Ù‚ÙˆØ·)
	if is_instance_valid(hitbox):
		if new_state == State.DIVE_START or new_state == State.DIVE_FALLING:
			hitbox.activate() # ÙŠÙØ¹Ù„ Ø§Ù„Ù‡ÙŠØª Ø¨ÙˆÙƒØ³ Ù„ÙŠØ¶Ø± Ø¨Ø§Ù„Ù„Ø§Ø¹Ø¨ Ø£Ø«Ù†Ø§Ø¡ Ø§Ù„Ø³Ù‚ÙˆØ·
		else:
			hitbox.deactivate()
			
	current_state = new_state
	
	# âœ… ÙØ­Øµ ØµÙ„Ø§Ø­ÙŠØ© anim Ù‚Ø¨Ù„ Ø§Ø³ØªØ¯Ø¹Ø§Ø¡ play()
	if not is_instance_valid(anim):
		return
		
	match new_state:
		State.PATROL, State.CHASE:
			anim.play("Fly") 
			
		State.SHOOT_PREPARE:
			anim.play("Smash_Start") 
			velocity = Vector2.ZERO
			attack_timer.start(SHOOT_PREPARE_TIME)
			# âœ… Ø¹Ù†Ø¯ Ø¨Ø¯Ø¡ Ø§Ù„ØªØ­Ø¶ÙŠØ±ØŒ ÙŠØªÙ… ØªÙˆØ¬ÙŠÙ‡ Ø§Ù„Ø¹Ø¯Ùˆ Ù†Ø­Ùˆ Ø§Ù„Ù„Ø§Ø¹Ø¨
			if target_player:
				_set_orientation(sign(target_player.global_position.x - global_position.x))
			
		State.SHOOT:
			_shoot_projectile()
			anim.play("Smash_End") 
			
		State.DIVE_START:
			# ğŸ’¡ ÙŠØ¨Ø¯Ø£ Ø§Ù„Ø­Ø±ÙƒØ© (Ø±Ø³ÙˆÙ… Ù…Ø±Ø© ÙˆØ§Ø­Ø¯Ø©)
			anim.play("Dive_Start") 
			
		State.DIVE_FALLING:
			# ğŸ’¡ Ø­Ø±ÙƒØ© Ø§Ù„Ø³Ù‚ÙˆØ· (Ø±Ø³ÙˆÙ… Ø­Ù„Ù‚Ø©) - Ù‚Ø¯ ØªÙƒÙˆÙ† ØªØ´ØºÙŠÙ„Ù‡Ø§ ÙÙŠ _logic_dive_falling Ø£ÙƒØ«Ø± Ø¯Ù‚Ø©
			pass # ÙŠØªÙ… ØªØ´ØºÙŠÙ„Ù‡Ø§ ÙÙŠ _logic_dive_falling Ø¨Ø¹Ø¯ Ø§Ù†ØªÙ‡Ø§Ø¡ Dive_Start
			
		State.DIVE_END:
			# ğŸ’¡ Ø±Ø³Ù…Ø© Ø§Ù„Ù‡Ø¨ÙˆØ· (Ø±Ø³ÙˆÙ… Ù…Ø±Ø© ÙˆØ§Ø­Ø¯Ø©)
			anim.play("Dive_End") 
			
		State.HIT:
			anim.play("Hit")
			hit_reaction_timer = 0.3
			
		State.DIE:
			# Ø§Ø³ØªØ®Ø¯Ø§Ù… set_deferred Ù„ØªØ¬Ù†Ø¨ Ø§Ù„Ø£Ø®Ø·Ø§Ø¡ ÙÙŠ Ø§Ù„Ø¥Ø·Ø§Ø± Ø§Ù„Ø­Ø§Ù„ÙŠ
			hurt_box.set_deferred("monitorable", false) 
			anim.play("Die")

# ----------------------------------------------------
# ğŸ¯ Ù…Ù†Ø·Ù‚ Ø§Ù„Ù‡Ø¬ÙˆÙ… (Projectile Logic)
# ----------------------------------------------------
func _shoot_projectile():
	if not is_instance_valid(target_player) or not PROJECTILE_SCENE:
		return
		
	var projectile = PROJECTILE_SCENE.instantiate()
	get_parent().add_child(projectile)
	
	var direction = (target_player.global_position - global_position).normalized()
	
	# ğŸ’¡ ØªÙ… ØªØ¹Ø¯ÙŠÙ„: Ø§Ù„Ø¥Ø·Ù„Ø§Ù‚ Ù…Ù† Ù…Ø±ÙƒØ² Ø§Ù„ÙƒØ§Ø¦Ù† (global_position) ğŸ’¡
	projectile.global_position = global_position
	
	# âœ… ØªÙ…Ø±ÙŠØ± Ù…Ø±Ø¬Ø¹ Ø§Ù„Ø¹Ø¯Ùˆ Ø§Ù„Ù…ÙØ·Ù„Ù‚ Ù„Ù…Ù†Ø¹ Ø§Ù„Ø§ØµØ·Ø¯Ø§Ù… Ø§Ù„Ø°Ø§ØªÙŠ
	if projectile.has_method("launch"):
		projectile.launch(direction, PROJECTILE_SPEED, ATTACK_DAMAGE, self)

# ----------------------------------------------------
# ğŸ¬ Ù…Ø¹Ø§Ù„Ø¬Ø© Ø§Ù„Ø±Ø³ÙˆÙ… ÙˆØ§Ù„Ø¥Ø´Ø§Ø±Ø§Øª ÙˆØ§Ù„Ø¯ÙˆØ§Ù„ Ø§Ù„Ù…Ø³Ø§Ø¹Ø¯Ø©
# ----------------------------------------------------

# ğŸ’¡ Ø¯Ø§Ù„Ø© Ù…Ø³Ø§Ø¹Ø¯Ø©: Ù„Ù„ØªØ­Ù‚Ù‚ Ù…Ø§ Ø¥Ø°Ø§ ÙƒØ§Ù† Ø§Ù„Ø¹Ø¯Ùˆ ÙŠÙˆØ§Ø¬Ù‡ Ø§Ù„Ù„Ø§Ø¹Ø¨
func _is_facing_player() -> bool:
	if not target_player: return false
	
	var player_direction_sign = sign(target_player.global_position.x - global_position.x)
	var enemy_facing_sign = _get_facing_direction()
	
	# ÙŠÙˆØ§Ø¬Ù‡ Ø§Ù„Ù„Ø§Ø¹Ø¨ Ø¥Ø°Ø§ ÙƒØ§Ù†Øª Ø¥Ø´Ø§Ø±Ø© Ø§ØªØ¬Ø§Ù‡ Ø§Ù„Ø¹Ø¯Ùˆ Ù‡ÙŠ Ù†ÙØ³Ù‡Ø§ Ø¥Ø´Ø§Ø±Ø© Ø§ØªØ¬Ø§Ù‡ Ø§Ù„Ù„Ø§Ø¹Ø¨
	return player_direction_sign == enemy_facing_sign

# ğŸ’¡ Ø¯Ø§Ù„Ø© Ù…Ø³Ø§Ø¹Ø¯Ø©: ØªØ¹ÙŠØ¯ Ø§ØªØ¬Ø§Ù‡ Ø§Ù„Ø¹Ø¯Ùˆ (-1 ÙŠØ³Ø§Ø±ØŒ 1 ÙŠÙ…ÙŠÙ†)
func _get_facing_direction() -> float:
	if not is_instance_valid(anim): return 1.0
	return -1.0 if anim.flip_h else 1.0

func _on_animation_finished():
	var finished_anim = anim.animation

	match finished_anim:
		"Smash_End":
			# Ø§Ù„Ø¹ÙˆØ¯Ø© Ø¥Ù„Ù‰ Ø§Ù„Ù…Ø·Ø§Ø±Ø¯Ø© Ø£Ùˆ Ø§Ù„Ø¯ÙˆØ±ÙŠØ§Øª Ø¨Ø¹Ø¯ Ø§Ù„Ù‚Ø°Ù
			change_state(State.CHASE if target_player else State.PATROL)
			
		"Dive_Start":
			# Ø¨Ø¹Ø¯ Ø§Ù†ØªÙ‡Ø§Ø¡ Ø­Ø±ÙƒØ© Ø¨Ø¯Ø¡ Ø§Ù„ØºÙˆØµØŒ Ù†Ù†ØªÙ‚Ù„ Ø¥Ù„Ù‰ Ø­Ø§Ù„Ø© Ø§Ù„Ø³Ù‚ÙˆØ· Ø§Ù„Ù…Ø³ØªÙ…Ø±
			if current_state == State.DIVE_START:
				change_state(State.DIVE_FALLING)
				
		"Dive_End":
			# Ø¨Ø¹Ø¯ Ø§Ù†ØªÙ‡Ø§Ø¡ Ø±Ø³Ù…Ø© Ø§Ù„Ù‡Ø¨ÙˆØ·ØŒ ÙŠØ¹ÙˆØ¯ Ù„Ù„Ù…Ø·Ø§Ø±Ø¯Ø©
			if current_state == State.DIVE_END:
				change_state(State.CHASE if target_player else State.PATROL)
				
		"Die":
			queue_free()
			
		"Hit":
			if current_state == State.HIT:
				change_state(State.CHASE if target_player else State.PATROL)
		
func _on_attack_timer_timeout():
	# Ø¥Ø°Ø§ Ø§Ù†ØªÙ‡Ù‰ Ø§Ù„ØªØ­Ø¶ÙŠØ±ØŒ ÙŠÙ†ØªÙ‚Ù„ Ù„Ø­Ø§Ù„Ø© Ø§Ù„Ø±Ù…ÙŠ
	if current_state == State.SHOOT_PREPARE:
		change_state(State.SHOOT)

func _on_detection_body_entered(body: Node2D):
	if body.is_in_group("player"):
		target_player = body
		
func _on_detection_body_exited(body: Node2D):
	if body == target_player:
		target_player = null
		
func _set_orientation(direction: float):
	# âœ… ÙØ­Øµ ØµÙ„Ø§Ø­ÙŠØ© anim Ù‚Ø¨Ù„ Ø§Ù„ØªØ¹Ø¯ÙŠÙ„
	if not is_instance_valid(anim):
		return
		
	if direction != 0:
		anim.flip_h = direction > 0
